第一次提交

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 /var/cache/*
 /var/logs/*
 /var/sessions/*
+/var
 !var/cache/.gitkeep
 !var/logs/.gitkeep
 !var/sessions/.gitkeep
@@ -46,3 +47,7 @@
 
 # Embedded web-server pid file
 /.web-server-pid
+
+.idea*
+.env
+.env*
