--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,10 @@
 .idea*
 .env
 .env*
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
