--- a/.env
+++ b/.env
@@ -25,6 +25,8 @@ APP_SECRET=8ae593ea017375a1c1e4ea9c6959c311
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:newrootpassword@127.0.0.1:3306/symfony_admin
+#DATABASE_URL=mysql://root:adminTzs!123!@127.0.0.1:3306/symfony_admin
+
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
